Fix vertical alignment of menu icons
Add .image-icon class (similar to .font-icon) to be able to set
min-width and max-height only for image icons. Setting those sizes for
all types of icons would break the vertical alignment of font icons.

Use consistent order of classes: "icon <font|image>-icon".

Simplify/format code of $.fn.appendIcon.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/main.less
@@ -301,7 +301,7 @@ button {
       color: @button-font-icon-color;
     }
 
-    &:not(.font-icon) {
+    &.image-icon {
       max-height: 100%;
     }
   }
